codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_events.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  Hook                                                                                                          
  来 自 配 置 和 已 启 用 插 件 的 生 命 周 期  Hook。                                                                          
                                                                                                                
  事 件                   已 安 装       已 启 用       说 明                                                             
  PreToolUse            2           1           工 具 执 行 前                                                       
  PermissionRequest     1           1           请 求 权 限 时                                                       
  PostToolUse           0           0           工 具 执 行 后                                                       
  PreCompact            0           0           压 缩 上 下 文 前                                                     
  PostCompact           0           0           压 缩 上 下 文 后                                                     
  SessionStart          0           0           新 会 话 开 始 时                                                     
  SessionEnd            0           0           会 话 结 束 前                                                       
  UserPromptSubmit      0           0           用 户 提 交 提 示 时                                                   
  SubagentStart         0           0           创 建  subagent 时                                                 
  SubagentStop          0           0           subagent 结 束 轮 次 前                                              
  Stop                  0           0           Codex 结 束 轮 次 前                                                 
                                                                                                                
  按 下  Enter 以 查 看  Hook； Esc 以 关 闭                                                                             
