codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_managed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PermissionRequest 个  Hook                                                                                     
  启 用 或 禁 用  Hook。 更 改 会 自 动 保 存 。                                                                              
                                                                                                                
  [x] 第  1 个  Hook                                                                                              
                                                                                                                
  事 件       PermissionRequest                                                                                 
  匹 配 器      Bash                                                                                             
  来 源       管 理 员 配 置                                                                                         
  命 令       /enterprise/hooks/permission-check.sh                                                             
  模 式       同 步                                                                                               
  超 时       30 秒                                                                                              
  信 任       受 管 理                                                                                             
                                                                                                                
  受 管  Hook 始 终 启 用 ； 按 下  Esc 以 返 回                                                                            
