codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_review_needed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse 个  Hook                                                                                            
  1 hook needs review before it can run.                                                                        
                                                                                                                
  [!] 第  1 个  Hook · 新 增                                                                                        
                                                                                                                
  事 件       PreToolUse                                                                                        
  匹 配 器      Bash                                                                                             
  来 源       用 户 配 置  - /tmp/hooks.json                                                                        
  命 令       /tmp/pre-tool-use-check.sh                                                                        
  模 式       同 步                                                                                               
  超 时       30 秒                                                                                              
  信 任       新  Hook - 需 要 审 核                                                                                 
                                                                                                                
  按 下  T 以 信 任 ； Esc 以 返 回                                                                                      
