codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_scrolled_handlers.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse 个  Hook                                                                                            
  启 用 或 禁 用  Hook。 更 改 会 自 动 保 存 。                                                                              
                                                                                                                
  [x] 第  2 个  Hook                                                                                              
  [x] 第  3 个  Hook                                                                                              
  [x] 第  4 个  Hook                                                                                              
  [x] 第  5 个  Hook                                                                                              
  [x] 第  6 个  Hook                                                                                              
  [x] 第  7 个  Hook                                                                                              
  [x] 第  8 个  Hook                                                                                              
  [x] 第  9 个  Hook                                                                                              
                                                                                                                
  事 件       PreToolUse                                                                                        
  匹 配 器      Bash                                                                                             
  来 源       用 户 配 置  - /tmp/hooks.json                                                                        
  命 令       /tmp/hook-8.sh                                                                                    
  模 式       同 步                                                                                               
  超 时       30 秒                                                                                              
  信 任       已 信 任                                                                                             
                                                                                                                
  按 下  Space 或  Enter 以 切 换 ； Esc 以 返 回                                                                         
